# artifacts-imc24-reACKed-QUICer

./: README.md
04-go-pto-tool/: Makefile  (+2 more)
05-instant-ack-ccds/: Makefile  README.md  pyproject.toml  requirements.txt
05-instant-ack-ccds/data/raw/: Makefile
05-instant-ack-ccds/data/raw/all-interop-servers/2024-08-14T01:43/aioquic_quic-go/handshake/sim/: pcap.csv  trace_node_left.pcap
05-instant-ack-ccds/data/raw/all-interop-servers/2024-08-14T01:43/go-x-net_quic-go/handshake/sim/: pcap.csv  trace_node_left.pcap
05-instant-ack-ccds/instant_ack/: __init__.py  config.py  dataset.py
05-instant-ack-ccds/instant_ack/data/: constants.py  convenience.py  preprocess_qlog.py  preprocess_qscanner.py  validation.py
05-instant-ack-ccds/instant_ack/visualization/: helpers.py  plot.py
05-instant-ack-ccds/notebooks/01-numerical_analysis/: 01-pto-evolution.html  01-pto-evolution.ipynb  02-theoretical-pto-improvement.html  02-theoretical-pto-improvement.ipynb
05-instant-ack-ccds/notebooks/02-interop-runner/: 01-ttfb.html  01-ttfb.ipynb  02-RTT-samples.html  02-RTT-samples.ipynb  03-first-PTO-improvement.html  03-first-PTO-improvement.ipynb  04-second-rtt-vs-first-rtt.html  04-second-rtt-vs-first-rtt.ipynb
05-instant-ack-ccds/notebooks/03-toplist/: 01-first-payload.html  01-first-payload.ipynb
05-instant-ack-ccds/notebooks/04-cloudflare/: 01-iack-timing-cloudflare.html  01-iack-timing-cloudflare.ipynb
05-instant-ack-ccds/notebooks/05-all-interop-servers/: 01-ack_delay.html  01-ack_delay.ipynb
05-instant-ack-ccds/tools/: add-pto-info  tshark-extract-quic-fields.sh
(+126 files in other folders)
