[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "instant_ack"
version = "0.0.1"
description = "Analysis of instant ACK in QUIC"
authors = [
  { name = "Jonas M\u00fccke, TU Dresden" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["instant_ack"]
force_sort_within_sections = true
